2007-04-03  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextReader.cs : character ']' inside DTD comment caused parser
	  error. Fixed bug #81294.

2007-03-05  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : when Create() returns customized XmlTextReader, set
	  EntityHandling.ExpandEntities. Fixed bug #81000.

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextReader.cs, XmlTextReader2.cs : Reset() should work now.
	  Closing bug #80849.

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDValidatingReader2.cs, XmlTextReader.cs, XmlNodeReaderImpl.cs:
	  Read() silently returns false when it is closed. Fixed bug #80848.

2007-02-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : ReadElementContentAsString() and all relevant methods
	  didn't consume empty element correctly.

2006-12-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : (InsertBefore) when newChild == refChild, do nothing
	  except for node type check. Fixed bug #80331.

2006-12-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Fixed ReadChars() to consume child elements,
	  including such cases that it breaks tags in the middle of multiple
	  ReadChars() calls. Fixed bug #80308.

2006-12-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : ReadChars() does not have to store characters,
	  so avoid extra storing. Patch by Csaba Halasz, fixed bug #80306.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : InnerText was returning comment text when there was
	  only a Comment node. Fixed bug #80233.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : Create() with string url was not returning validating
	  XmlReader.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* DTDValidatingReader2.cs : when an attribute declaration is missing
	  in the corresponding attlist declaration, it caused NRE.
	  Fixed bug #80231.

2006-12-11  Atsushi Enomoto <atsushi@ximian.com>
