@@ -1,3 +1,8 @@
+2007-05-15  Konstantin Triger <kostat@mainsoft.com>
+
+	* XmlWriter.cs, XmlTextWriter2.cs: ensure the file
+		is closed in XmlWriter.Create(filename).
+
 2007-04-03  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlTextReader.cs : character ']' inside DTD comment caused parser
